--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,14 @@ rust:
 before_cache: |
   cargo install cargo-tarpaulin
 before_script:
-  - rustup component add rustfmt --toolchain nightly
+  - rustup component add rustfmt
   - rustup component add clippy
   - cargo install cargo-audit
 # As a result of https://github.com/travis-ci/travis-ci/issues/1066, we run
 # everything in one large command instead of multiple commands.
 # In this way, the build stops immediately if one of the commands fails.
 script: |
-  cargo +nightly fmt --all -- --check &&
+  cargo fmt --all -- --check &&
   cargo clippy -- -D warnings &&
   cargo build &&
   cargo test &&
