--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ actix-web = "=4.0.0-beta.3"
 [dev-dependencies]
 actix-rt = "=2.0.0"
 reqwest = "=0.11"
-tokio = "=1"
+tokio = {version= "=1", features = ["rt", "net"] }
