--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/main.rs"
 name = "newsletter"
 
 [dependencies]
-actix-web = "=4.0.0-beta.3"
+actix-web = "=3.3.2"
 
 [dev-dependencies]
 actix-rt = "=2.0.0"
