--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ path = "src/main.rs"
 name = "newsletter"
 
 [dependencies]
-actix-web = "=3.3.2"
+actix-web = "=4.0.0-beta.3"
 
 [dev-dependencies]
-actix-rt = "=2.0.0"
-reqwest = "=0.11"
-tokio = {version= "=1", features = ["rt", "net"] }
+actix-rt = "~2.0"
+reqwest = "~0.11"
+tokio = {version= "~1.3.0", features = ["rt", "net"] }
