--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,13 @@ name = "newsletter"
 
 [dependencies]
 actix-web = "=4.0.0-beta.3"
+# We need the optional `derive` feature to use `serde`'s procedural macros:
+# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
+# The feature is not enabled by default to avoid pulling in
+# unnecessary dependencies for projects that do not need it.
+serde = { version = "~1.0", features = ["derive"]}
 
 [dev-dependencies]
 actix-rt = "~2.0"
 reqwest = "~0.11"
-tokio = {version= "~1.3.0", features = ["rt", "net"] }
+tokio = {version= "~1.3", features = ["rt", "net"] }
