--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,17 @@ path = "src/main.rs"
 name = "newsletter"
 
 [dependencies]
-actix-web = "=4.0.0-beta.3"
+actix-web = "4.0.0-beta.3"
+config = "~0.11"
+chrono = "~0.4"
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
 # The feature is not enabled by default to avoid pulling in
 # unnecessary dependencies for projects that do not need it.
 serde = { version = "~1.0", features = ["derive"]}
+sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
+uuid = { version = "~0.8", features = ["v4"] }
+
 
 [dev-dependencies]
 actix-rt = "~2.0"
