fix(ci): add init_db script

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-RUN_MODE=local
-DATABASE_URL=postgres://postgres:password@localhost:9000/newsletter
+export RUN_MODE=local
+export DATABASE_URL=postgres://postgres:password@localhost:9000/newsletter
