--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: rust
+services:
+  - docker
 cache: cargo
 rust:
   - nightly
@@ -12,6 +14,7 @@ before_script:
 # everything in one large command instead of multiple commands.
 # In this way, the build stops immediately if one of the commands fails.
 script: |
+  source ./.env
   sh scripts/init_db.sh
   cargo +nightly fmt --all -- --check &&
   cargo clippy -- -D warnings &&
