fix(ci): add init_db script

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ before_script:
 # As a result of https://github.com/travis-ci/travis-ci/issues/1066, we run
 # everything in one large command instead of multiple commands.
 # In this way, the build stops immediately if one of the commands fails.
-script: |
-  source ./.env
-  sh scripts/init_db.sh
-  cargo +nightly fmt --all -- --check &&
-  cargo clippy -- -D warnings &&
-  cargo build &&
-  cargo test
-after_success: |
-  cargo tarpaulin --ignore-tests
+script:
+  - source ./.env
+  - sh scripts/init_db.sh
+  - cargo +nightly fmt --all -- --check
+  - cargo clippy -- -D warnings
+  - cargo build
+  - cargo test
+after_success:
+  - cargo tarpaulin --ignore-tests
