--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,18 @@ name = "newsletter"
 actix-web = "4.0.0-beta.3"
 config = "~0.11"
 chrono = "~0.4"
+env_logger = "0.8.3"
+log = "0.4.14"
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
 # The feature is not enabled by default to avoid pulling in
 # unnecessary dependencies for projects that do not need it.
 serde = { version = "~1.0", features = ["derive"] }
 sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
+tracing = {version = "0.1.25", features = ["log"]}
+tracing-bunyan-formatter = "0.2.0"
+tracing-futures = "0.2.4"
+tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
 uuid = { version = "~0.8", features = ["v4"] }
 
 
