--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,13 @@ tracing = {version = "0.1.25", features = ["log"]}
 tracing-bunyan-formatter = "0.2.0"
 tracing-futures = "0.2.4"
 tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
+tracing-actix-web = "0.3.0-beta.2"
 uuid = { version = "~0.8", features = ["v4"] }
 
 
 [dev-dependencies]
 actix-rt = "~2.0"
+lazy_static = "~1.4.0"
 reqwest = "~0.11"
 tokio = { version = "~1.3", features = ["rt", "net"] }
+
