--- a/configuration/base.toml
+++ b/configuration/base.toml
@@ -1,9 +1,9 @@
 [application]
-host = "127.0.0.1"
 max_pending_connections = 128
 port = 8000
 
 [database]
+connect_timeout_seconds = 2
 database_name = "newsletter"
 host = "localhost"
 password = "password"
