--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,11 @@ tracing-futures = "0.2.4"
 tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
 tracing-actix-web = "0.3.0-beta.2"
 uuid = { version = "~0.8", features = ["v4"] }
-
+custom_error = "1.9.1"
 
 [dev-dependencies]
 actix-rt = "~2.0"
+claim = "0.5.0"
 lazy_static = "~1.4.0"
 reqwest = "~0.11"
 tokio = { version = "~1.3", features = ["rt", "net"] }
