--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,21 +15,20 @@ name = "newsletter"
 actix-web = "4.0.0-beta.3"
 config = "~0.11"
 chrono = "~0.4"
+custom_error = "~1.9"
 env_logger = "~0.8"
 log = "~0.4"
-# We need the optional `derive` feature to use `serde`'s procedural macros:
-# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
-# The feature is not enabled by default to avoid pulling in
-# unnecessary dependencies for projects that do not need it.
+reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "~1.0", features = ["derive"] }
+serde_json = { version = "1.0"}
 sqlx = { version = "~0.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
 tracing = {version = "~0.1", features = ["log"]}
 tracing-bunyan-formatter = "~0.2"
 tracing-futures = "~0.2"
 tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
 tracing-actix-web = "0.3.0-beta.2"
+url = { version = "2", features = ["serde"] }
 uuid = { version = "~0.8", features = ["v4"] }
-custom_error = "~1.9"
 unicode-segmentation = "~1.7"
 validator = "0.13.0"
 
@@ -41,5 +40,6 @@ lazy_static = "~1.4"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 reqwest = "~0.11"
-tokio = { version = "~1.3", features = ["rt", "net"] }
+tokio = { version = "~1.3", features = ["net", "macros", "rt"] }
+wiremock = "0.4.9"
 
