feat: add confirmation email

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ actix-rt = "~2.0"
 claim = "0.5"
 fake = "~2.3"
 lazy_static = "~1.4"
+linkify = "0.5.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 reqwest = "~0.11"
