--- a/spec.yaml
+++ b/spec.yaml
@@ -36,3 +36,6 @@ envs:
   - key: APP_DATABASE__USERNAME
     scope: RUN_TIME
     value: ${newsletter-database.USERNAME}
+  - key: APP_APPLICATION__BASE_URL
+    scope: RUN_TIME
+    value: ${_self.APP_URL}
