--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ chrono = "~0.4"
 custom_error = "~1.9"
 env_logger = "~0.8"
 log = "~0.4"
+rand = { version = "0.8", features=["std_rng"] }
 reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = { version = "1.0"}
