--- a/configuration/base.toml
+++ b/configuration/base.toml
@@ -14,6 +14,6 @@ username = "postgres"
 
 [email_client]
 base_url = "https://api.postmarkapp.com"
-sender_email = "catalaniangelo@gmail.com"
+sender_email = "testemail@gmail.com"
 token = "test-secret-token"
 timeout_secs = 10
