feat: update dependencies

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 export RUN_MODE=local
 export DATABASE_URL=postgres://postgres:password@localhost:9000/newsletter
+export TEST_LOG=enabled
+export RUST_LOG="sqlx=error,info"
+export APP_ENVIRONMENT=local
