--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,11 @@ name = "newsletter"
 
 [dependencies]
 actix-web = "4.0.0-beta.5"
+anyhow = "~1.0.40"
 config = "~0.11"
 chrono = "~0.4"
 custom_error = "~1.9"
+thiserror = "~1.0.24"
 env_logger = "~0.8"
 log = "~0.4"
 rand = { version = "0.8", features = ["std_rng"] }
