feat: improve logging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ anyhow = "~1.0.40"
 config = "~0.11"
 chrono = "~0.4"
 custom_error = "~1.9"
+derivative = "~2.2"
 thiserror = "~1.0.24"
 env_logger = "~0.8"
 log = "~0.4"
