--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,6 @@ linkify = "0.5.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 reqwest = "~0.11"
-tokio = { version = "~1.3", features = ["net", "macros", "rt"] }
-wiremock = "0.5.2"
+tokio = { version = "1.10", features = ["net", "macros", "rt"] }
+wiremock = "0.5.6"
 
