fix(ci): remove build step because digital ocean free trial expired

--- a/.github/workflows/ci_and_cd.yml
+++ b/.github/workflows/ci_and_cd.yml
@@ -80,6 +80,8 @@ jobs:
           command: test
 
   build:
+    # skip build because DigitalOcean free trial expired
+    if: "false"
     name: Build & Deploy
     needs: [ fmt,test ]
     runs-on: ubuntu-latest
