--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ url = { version = "2", features = ["serde"] }
 uuid = { version = "~0.8", features = ["v4"] }
 unicode-segmentation = "~1.7"
 validator = "0.13.0"
+base64 = "0.13.0"
 
 [dev-dependencies]
 actix-rt = "~2"
