--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,13 @@ derivative = "~2.2"
 thiserror = "~1.0.24"
 env_logger = "~0.8"
 log = "~0.4"
+rayon = "1.5.1"
 rand = { version = "0.8", features = ["std_rng"] }
 reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 sqlx = { version = "~0.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
+tokio = { version = "1.10", features = ["sync", "time"] }
 tracing = { version = "~0.1", features = ["log"] }
 tracing-bunyan-formatter = "~0.2.4"
 tracing-futures = "~0.2"
